--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
+  formz: ^0.6.0
 
 
   # The following adds the Cupertino Icons font to your application.
