--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   equatable: ^2.0.5
   intl: ^0.20.1
+  flex_list: ^1.0.0
 
 dev_dependencies:
   flutter_test:
